# ai-image-hackaton

./: README.md  pyproject.toml
src/image_processing/: image_conversion.py  model.py
src/indexing/: __init__.py
